--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
+@import-normalize;
+
 body {
-  margin: 0;
+  margin: 20px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -10,4 +12,21 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+ul li {
+  list-style: none;
+}
+
+fieldset {
+  border: none;
+}
+
+input[type=text], input[type=date] {
+  display: block;
+  margin: 5px 0 10px; 
+}
+
+input[type=checkbox] {
+  margin: 5px 5px 0;
 }
