--- a/src/index.css
+++ b/src/index.css
@@ -14,12 +14,18 @@ code {
     monospace;
 }
 
+ul {
+  padding: 0;
+  margin: 0;
+}
+
 ul li {
   list-style: none;
 }
 
 fieldset {
   border: none;
+  padding: 0;
 }
 
 input[type=text], input[type=date] {
