--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
 @import-normalize;
 
 body {
+  background-color: #13315C;
+  color: #eef4ed;
   margin: 20px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -16,7 +18,7 @@ code {
 
 ul {
   padding: 0;
-  margin: 0;
+  margin: 0 0 20px;
 }
 
 ul li {
@@ -33,6 +35,22 @@ input[type=text], input[type=date] {
   margin: 5px 0 10px; 
 }
 
+input[type=date] {
+  padding: 5px;
+}
+
 input[type=checkbox] {
   margin: 5px 5px 0;
+}
+
+input[type=submit] {
+  margin-top: 10px;
+}
+
+h1 {
+  text-align: center;
+}
+
+h2 {
+  margin-top: 0;
 }
