--- a/src/App.css
+++ b/src/App.css
@@ -17,3 +17,24 @@
   flex-direction: column;
   align-items: center;
 }
+
+.personal-details {
+  margin-bottom: 25px;
+}
+
+.button {
+  border: 0;
+  border-radius: 5px;
+  color: #eef4ed;
+  padding: 7px 25px 9px;
+  margin: 0;
+  font-weight: bold;
+}
+
+.confirm {
+  background-color: #32CD32;
+}
+
+.reject {
+  background-color: red;
+}
