--- a/src/App.css
+++ b/src/App.css
@@ -26,15 +26,44 @@
   border: 0;
   border-radius: 5px;
   color: #eef4ed;
+  cursor: pointer;
   padding: 7px 25px 9px;
   margin: 0;
   font-weight: bold;
+  text-shadow: inset 0 1px 1px rgba(0, 0, 0, .7);
+  transition: background-color .1s ease-in;
 }
 
 .confirm {
-  background-color: #32CD32;
+  background-color: rgba(50, 205, 50, 1);
+}
+
+.confirm:hover {
+  background-color: rgba(50, 205, 50, .7);
 }
 
 .reject {
-  background-color: red;
+  background-color: rgba(255, 0, 0, 1);
+}
+
+.reject:hover {
+  background-color: rgba(255, 0, 0, .7);
+}
+
+.disabled-button {
+  background-color: #6B6E6F;
+}
+
+.disabled-button:hover {
+  background-color: #6B6E6F;
+  cursor: default;
+}
+
+.button-group {
+  display: flex;
+  justify-content: space-between;
+}
+
+.center {
+  text-align: center;
 }
