--- a/src/index.css
+++ b/src/index.css
@@ -54,3 +54,12 @@ h1 {
 h2 {
   margin-top: 0;
 }
+
+table {
+  margin-bottom: 25px;
+}
+
+td:nth-child(1) {
+  padding: 5px 15px 5px 0;
+  text-align: right;
+}
